--- a/cantaloupe.html
+++ b/cantaloupe.html
@@ -135,6 +135,6 @@ text-align:left !important;
 <input type="hidden" name="fbzx" value="4959157389409290898">
 
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td style='border-width:0px !important;' class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
-<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action " style="font-size:18px;font-weight:bold;">
+<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action " style="font-size:18px;font-weight:bold;width:100px;height:30px;">
 <div class="ss-password-warning ss-secondary-text"></div></td>
 </tr></tbody></table></div></ol></form>
