--- a/cantaloupe.html
+++ b/cantaloupe.html
@@ -53,6 +53,10 @@ width:495px !important;
 #bannersPanel .description {
 text-align:left !important;
 }	
+#ss-submit {
+	font-weight:bold;
+	font-size:25px;
+}
 </style>
 
 
