--- a/cantaloupe.html
+++ b/cantaloupe.html
@@ -56,6 +56,8 @@ text-align:left !important;
 #ss-submit {
 	font-weight:bold;
 	font-size:25px;
+	background-color:#1E54F2;
+	color:white;
 }
 </style>
 
